--- a/twitter_api.ipynb
+++ b/twitter_api.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importattion des modules\n",
+    "# Importation des modules\n",
     "import tweepy as tw\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -162,62 +162,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ceci est un essaie pour les bases\n",
-    "Je dois supprimer les ponctuations (sait comment faire, mais difficile avec les \"@\")\n",
-    "Racinisation, get_token ? \n",
-    "Doit on faire des DTM (comme dans le TD ?)\n",
-    "\n",
-    "test = df[\"tweet\"].iloc[1]\n",
-    "final_test = []\n",
-    "for mot in test.split():\n",
-    "    if mot not in mots_vides:\n",
-    "        final_test.append(mot)\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_related_tweets(\"Guerre en ukraine\")\n",
-    "#df.head(7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Connecte to data\n",
-    "#URI = \"mysql://root:master2@localhost/data?charset=utf8&use_unicode=1\"\n",
-    "#con = sqlalchemy.create_engine(URI)\n",
-    "\n",
-    "#df[[\"name\", \"time\" ,\"tweet\", \"like\", \"retweet\", \"nb_retweet\"]].to_sql(name= \"tweet\", con = con, if_exists=\"append\", index= False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(383, 6)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
+    "df = get_related_tweets(\"Guerre en ukraine\")"
    ]
   },
   {
